# timm-explorer

./: README.md  model_explorer.py  model_stats_generator.py  pyproject.toml
static/: styles.css
